<resources>
    <string name="app_name">Comsats Store</string>
    <string name="financial_management">Financial Management</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="select_your_subject">select your subject</string>
    <string name="research_tools_and_techniques">Research Tools and Techniques</string>
    <string name="corporate_law">Corporate Law</string>
    <string name="marketing_management">Marketing Management</string>
    <string name="organizational_behavior">Organizational Behavior</string>
    <string name="micro_economics">Micro Economics</string>
    <string name="introduction_to_business">Introduction to Business</string>
    <string name="business_maths_i">Business Maths I</string>
    <string name="business_law">Business Law</string>
    <string name="business_finance">Business Finance</string>
    <string name="management_information_system">Management Information System</string>
    <string name="statistical_inference">Statistical Inference</string>
    <string name="human_resource_management">Human Resource Management</string>
    <string name="global_business_management">Global Business Management</string>
    <string name="macro_economics">Macro Economics</string>
    <string name="accounting_ii">Accounting II</string>
    <string name="intro_to_management">Intro to Management</string>
    <string name="business_maths_ii">Business Maths II</string>
    <string name="entrepreneurship">Entrepreneurship</string>
    <string name="corporate_governance">Corporate Governance</string>
    <string name="production_and_operation_management">Production and Operation Management</string>
    <string name="intro_to_psychology">Intro to Psychology</string>
    <string name="intro_to_statistics">Intro to Statistics</string>
    <string name="business_communication_workshop">Business Communication Workshop</string>
    <string name="cost_accounting">Cost Accounting</string>
    <string name="electric_circuit_analysis">Electric Circuit Analysis</string>
    <string name="digital_image_processing">Digital Image Processing</string>
    <string name="fundamentals_of_marketing">Fundamentals of Marketing</string>
    <string name="electricity_magnetism_and_optics">Electricity, Magnetism and Optics</string>
    <string name="design_and_analysis_of_algorithm">Design and Analysis of Algorithm</string>
    <string name="theory_of_automata">Theory of Automata</string>
    <string name="data_communication_and_computer_networks">Data Communication and Computer Networks</string>
    <string name="introduction_to_itc">Introduction to ITC</string>
    <string name="software_engineering_concepts">Software Engineering Concepts</string>
    <string name="intro_to_bioinformatics">Intro to Bioinformatics</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="introduction_to_management">Introduction to Management</string>
    <string name="microprocessor_and_assembly_language">Microprocessor and Assembly Language</string>
    <string name="human_computer_interaction">Human Computer Interaction</string>
    <string name="ppit">PPIT</string>
    <string name="data_structures_and_algo">Data Structures and Algo</string>
    <string name="statistics_and_probability">Statistics and Probability</string>
    <string name="engineering_drawing">Engineering Drawing</string>
    <string name="engineering_mechanics_and_thermodynamics">Engineering Mechanics and Thermodynamics</string>
    <string name="applied_physics_for_engineers">Applied Physics for Engineers</string>
    <string name="electric_circuits_analysis_i">Electric Circuits Analysis I</string>
    <string name="mba">MBA</string>
    <string name="management_science">Management Science</string>
    <string name="intro_to_computer_programming">Intro to Computer Programming</string>
    <string name="database_systems">Database Systems</string>
    <string name="software_engineering_i">Software Engineering I</string>
    <string name="compiler_construction">Compiler Construction</string>
    <string name="project_ideas">Project Ideas</string>
    <string name="data_structures">Data Structures</string>
    <string name="automata_theory">Automata Theory</string>
    <string name="operating_systems_concepts">Operating Systems Concepts</string>
    <string name="computer_communication_and_network">Computer Communication and Network</string>
    <string name="software_engineering_ii">Software Engineering II</string>
    <string name="enterprise_system_development">Enterprise System Development</string>
    <string name="computer_architecture">Computer Architecture</string>
    <string name="introduction_to_computing">Introduction to Computing</string>
    <string name="calculus_i">Calculus I</string>
    <string name="set_theory_and_logic">Set Theory and Logic</string>
    <string name="partial_differential_equations">Partial Differential Equations</string>
    <string name="international_relations">International Relations</string>
    <string name="set_topology">Set Topology</string>
    <string name="mechanics_i">Mechanics I</string>
    <string name="intro_to_quantum_mechanics">Intro to Quantum Mechanics</string>
    <string name="tensor_analysis">Tensor Analysis</string>
    <string name="introduction_to_computer_programming">Introduction to Computer Programming</string>
    <string name="chinese">Chinese</string>
    <string name="calculus_ii">Calculus II</string>
    <string name="discrete_mathematics">Discrete Mathematics</string>
    <string name="electricity_and_magnetism">Electricity and Magnetism</string>
    <string name="algorithms">Algorithms</string>
    <string name="calculus_iii">Calculus III</string>
    <string name="abstract_algebra">Abstract Algebra</string>
    <string name="ordinary_differential_equations">Ordinary Differential Equations</string>
    <string name="degree_programs">Degree Programs</string>
    <string name="undergraduate_programs">Undergraduate Programs</string>
    <string name="graduate_programs">Graduate Programs</string>
    <string name="intro_to_sociology">Intro to Sociology</string>
    <string name="intro_to_bio_informatics">Intro to Bio Informatics</string>
    <string name="financial_accounting">Financial Accounting</string>
    <string name="software_quality_engineering">Software Quality Engineering</string>
    <string name="statistics_and_probability_theory">Statistics and Probability Theory</string>
    <string name="visual_programming">Visual Programming</string>
    <string name="english_comprehension_and_composition">English Comprehension and Composition</string>
    <string name="intro_to_ict">Intro to ICT</string>
    <string name="programming_fundamentals">Programming Fundamentals</string>
    <string name="calculus_and_analytical_geometry">Calculus and Analytical Geometry</string>
    <string name="islamic_studies">Islamic Studies</string>
    <string name="pakistan_studies">Pakistan Studies</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="object_oriented_software_engineering">Object Oriented Software Engineering</string>
    <string name="linear_algebra">Linear Algebra</string>
    <string name="professional_practices_for_it">Professional Practices for IT</string>
    <string name="data_communication_and_computer_n_w">Data Communication and Computer N/W</string>
    <string name="communication_skills">Communication Skills</string>
    <string name="discrete_structures">Discrete Structures</string>
    <string name="object_oriented_programming">Object Oriented Programming</string>
    <string name="multivariable_calculus">Multivariable Calculus</string>
    <string name="electrical_circuit_analysis">Electrical Circuit Analysis</string>
    <string name="intro_to_software_engineering">Intro to Software Engineering</string>
    <string name="select_your_semester">Select Your Semester</string>
    <string name="first_semester">First Semester</string>
    <string name="second_semester">Second Semester</string>
    <string name="third_semester">Third Semester</string>
    <string name="fourth_semester">Fourth Semester</string>
    <string name="fifth_semester">Fifth Semester</string>
    <string name="sixth_semester">Sixth Semester</string>
    <string name="seventh_semester">Seventh Semester</string>
    <string name="eighth_semester">Eighth Semester</string>
    <string name="scripting_language">Scripting Language</string>
    <string name="numerical_computing">Numerical Computing</string>
    <string name="software_project_management">Software Project Management</string>
    <string name="mobile_application_development">Mobile Application Development</string>
    <string name="computer_vision">Computer Vision</string>
    <string name="game_development">Game Development</string>
    <string name="software_design_and_architecture">Software Design and Architecture</string>
    <string name="web_technologies">Web Technologies</string>
    <string name="software_testing">Software Testing</string>
    <string name="data_structures_and_algorithm">Data Structures and Algorithm</string>
    <string name="report_writing_skills">Report Writing Skills</string>
    <string name="differential_equations">Differential Equations</string>
    <string name="digital_logic_design">Digital Logic Design</string>
    <string name="database_systems_i">Database Systems I</string>
    <string name="select_your_field">Select Your Field</string>
    <string name="computer_science">Computer Science</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="electrical_engineering">Electrical Engineering</string>
    <string name="business_administration">Business Administration</string>
    <string name="computer_engineering">Computer Engineering</string>
    <string name="mathematics">Mathematics</string>
    <string name="accounting_and_finance">Accounting and Finance</string>
    <string name="economics">Economics</string>
    <string name="cyber_security">Cyber Security</string>
    <string name="data_science">Data Science</string>
    <string name="artificial_intelligence">Artificial Intelligence</string>
    <string name="bioinformatics">Bioinformatics</string>
    <string name="physics">Physics</string>
    <string name="english">English</string>
    <string name="civil_engineering">Civil Engineering</string>
    <string name="mechanical_engineering">Mechanical Engineering</string>
    <string name="management_sciences">Management Sciences</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="fine_art">Fine Art</string>
    <string name="psychology">Psychology</string>
    <string name="biosciences">Biosciences</string>
    <string name="chemistry">Chemistry</string>
    <string name="file_details">File Details</string>
    <string name="upload">Upload</string>
    <string name="this_is_header_text">This is Header Text</string>
</resources>