<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maths_semester_activity"
    android:background="@drawable/bg0">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cs_store_2"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/shape_null">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_your_semester"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarSize="4dp"
                android:scrollbarTrackVertical="@color/white"
                android:scrollbarThumbVertical="@color/purple_700">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:background="@drawable/border">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/math_first_semester"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/first_semester"
                            android:textColor="@color/white"

                            android:textSize="15sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/math_second_semester"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/second_semester"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/math_third_semester"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/third_semester"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/math_fourth_semester"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/fourth_semester"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/math_fifth_semester"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/fifth_semester"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/math_sixth_semester"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/sixth_semester"
                            android:textColor="@color/white"
                            android:textSize="15sp"

                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/math_seventh_semester"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/seventh_semester"
                            android:textColor="@color/white"
                            android:textSize="15sp"

                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/math_eighth_semester"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/eighth_semester"
                            android:textColor="@color/white"
                            android:textSize="15sp"

                            />

                    </LinearLayout>


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-8836108209861797/7701174972"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>