<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg0"
    tools:context=".BBA_fifth_subs">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cs_store_2"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/shape_null">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/select_your_subject"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarSize="4dp"
                android:scrollbarTrackVertical="@color/white"
                android:scrollbarThumbVertical="@color/purple_700">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/border">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/BBA_FM"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/financial_management"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/BBA_EC"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/e_commerce"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/BBA_RTAT"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/research_tools_and_techniques"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/BBA_CL"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/corporate_law"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/BBA_MM"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/marketing_management"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/BBA_OB"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/organizational_behavior"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-8836108209861797/5406539340"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>